--- a/_themes/hawthorne/layouts/default.html
+++ b/_themes/hawthorne/layouts/default.html
@@ -1,18 +1,28 @@
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<title>{{ theme:partial src="_page-title" }}</title>
-<meta name="description" content="{{ theme:partial src="_meta-description" }}">
-{{ theme:partial src="_open-graph" }}
-{{ theme:partial src="_twitter-card" }}
+  <title>{{ theme:partial src="_page-title" }}</title>
 
-<link href="/_themes/hawthorne/css/hawthorne_{{ get_content from="/settings" }}{{ type_theme }}{{ /get_content }}_{{ get_content from="/settings" }}{{ color_theme }}{{ /get_content }}.css" rel="stylesheet" >
-<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <meta name="description" content="{{ theme:partial src="_meta-description" }}">
+  {{ theme:partial src="_open-graph" }}
+  {{ theme:partial src="_twitter-card" }}
 
-<script src="{{ _site_root }}{{ theme_path }}bower_components/modernizr/modernizr.js"></script>
+  <link href="/_themes/hawthorne/css/hawthorne_{{ get_content from="/settings" }}{{ type_theme }}{{ /get_content }}_{{ get_content from="/settings" }}{{ color_theme }}{{ /get_content }}.css" rel="stylesheet" >
+  <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
+  <script src="{{ _site_root }}{{ theme_path }}bower_components/modernizr/modernizr.js"></script>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-59180297-2', 'auto');
+    ga('send', 'pageview');
+  </script>
 
 </head>
 <body>
@@ -63,7 +73,7 @@
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 <!-- End Tweet JS -->
 
-{{ get_content from="/settings" }}{{ analytics_code }}{{ /get_content }}
+<!-- {{ get_content from="/settings" }}{{ analytics_code }}{{ /get_content }} -->
 
 </body>
 </html>
