--- a/_themes/hawthorne/layouts/default.html
+++ b/_themes/hawthorne/layouts/default.html
@@ -15,27 +15,18 @@
 
   <script src="{{ _site_root }}{{ theme_path }}bower_components/modernizr/modernizr.js"></script>
 
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-59180297-2', 'auto');
-    ga('send', 'pageview');
-  </script>
-
 </head>
 <body>
 
 <!-- Facebook JS -->
-<div id="fb-root"></div>
+<!-- <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+}(document, 'script', 'facebook-jssdk'));</script> -->
 <!-- End Facebook JS -->
 
 <div class="top-border"></div>
