Commented out social stuff I don't need right now.

--- a/_themes/hawthorne/layouts/feed.html
+++ b/_themes/hawthorne/layouts/feed.html
@@ -1,4 +1,4 @@
-{{ _xml_header }}
+<!-- {{ _xml_header }}
 <rss version="2.0"
   xmlns:atom="http://www.w3.org/2005/Atom"
   xmlns:dc="http://purl.org/dc/elements/1.1/"
@@ -7,4 +7,4 @@
   xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
   xmlns:content="http://purl.org/rss/1.0/modules/content/">
   {{ layout_content }}
-</rss>
+</rss> -->
