--- a/_themes/hawthorne/templates/feed.html
+++ b/_themes/hawthorne/templates/feed.html
@@ -1,4 +1,4 @@
-<channel>
+<!-- <channel>
 
   <atom:link href="http://www.example.com/feed" rel="self" type="application/rss+xml" />
   <title><![CDATA[{{ _site_name }}]]></title>
@@ -20,5 +20,5 @@
     <dc:date>{{ datestamp format="c" }}</dc:date>
   </item>
   {{ /entries:listing }}
-  
-</channel>
+
+</channel> -->
