--- a/_themes/hawthorne/partials/_twitter-card.html
+++ b/_themes/hawthorne/partials/_twitter-card.html
@@ -1,4 +1,4 @@
-{{ if segment_1 == "blog" && segment_2 }}
+<!-- {{ if segment_1 == "blog" && segment_2 }}
 <meta name="twitter:card" content="summary_large_image">
 
 {{ else }}
@@ -20,4 +20,4 @@
 {{ endif }}
 
 
-<meta name="twitter:domain" content="example.com">
+<meta name="twitter:domain" content="example.com"> -->
