--- a/_themes/hawthorne/layouts/default.html
+++ b/_themes/hawthorne/layouts/default.html
@@ -19,14 +19,14 @@
 <body>
 
 <!-- Facebook JS -->
-<!-- <div id="fb-root"></div>
+<div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script> -->
+}(document, 'script', 'facebook-jssdk'));</script>
 <!-- End Facebook JS -->
 
 <div class="top-border"></div>
