Trying to find where mysterious --> is.

--- a/_themes/hawthorne/layouts/default.html
+++ b/_themes/hawthorne/layouts/default.html
@@ -8,7 +8,7 @@
 
   <meta name="description" content="{{ theme:partial src="_meta-description" }}">
   {{ theme:partial src="_open-graph" }}
-  <!-- {{ theme:partial src="_twitter-card" }} -->
+  {{ theme:partial src="_twitter-card" }}
 
   <link href="/_themes/hawthorne/css/hawthorne_{{ get_content from="/settings" }}{{ type_theme }}{{ /get_content }}_{{ get_content from="/settings" }}{{ color_theme }}{{ /get_content }}.css" rel="stylesheet" >
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
